tests/test_proof/bad/output/money-overlap.catala_en.Proof
[ERROR] [A.y] At least two exceptions overlap for this variable:
 --> tests/test_proof/bad/money-overlap.catala_en
  | 
8 |   context y content boolean
  |           ^
  + Test
Counterexample generation is disabled so none was generated.
